# XGL

./: CMakeLists.txt  README.md  SimpleVertexShader.vert  XGL.kdev4
src/: defines.hpp  main.cpp  shader.cpp
